--- a/src/styles/01_homepage.scss
+++ b/src/styles/01_homepage.scss
@@ -153,7 +153,12 @@
         }
 
         .link-text {
-          font-family: 'Millionaire-Script';
+          h2 {
+            font-family: 'Millionaire-Script';
+            @include transform(translateY(calc(-0.18em)));
+            padding-left: 0.2em;
+            padding-right: 0.2em;
+          }
         }
       }
     }
